pagina final optimizada

--- a/html/nft__final.html
+++ b/html/nft__final.html
@@ -14,13 +14,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-	<link rel="stylesheet" href="/css/estilos.css">
-    <link rel="icon" href="/img/btc3.ico">
+	<link rel="stylesheet" href="../css/estilos.css">
+    <link rel="icon" href="../img/btc3.ico">
 </head>
 <body>
 <!-- Inicio del encabezado -->
 <header class="container-fluid">
-    <a href="./index.html" class="logo sticky-top" id="#" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000"><h1 class="d-inline p-2 bg-dark text-white">Finanzas2GO</h1></a>
+    <a href="../index.html" class="logo sticky-top" id="#" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000"><h1 class="d-inline p-2 bg-dark text-white">Finanzas2GO</h1></a>
     <div class="container d-flex align-items-center justify-content-end">
         <button class="btn bg-white text-black btn-outline-ligth btn-l btn-lg hamburger_menu" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
         Menú <i class="fa-solid fa-bars fa-lg"></i>
@@ -36,14 +36,14 @@
         </div>
         <div class="offcanvas-body">
             <!-- Logo -->
-            <img class="rounded-circle" src="/img/btc3.ico"  id="logo" alt="logo_sitio" width="125" height="125">
+            <img class="rounded-circle" src="../img/btc3.ico"  id="logo" alt="logo_sitio" width="125" height="125">
             <!-- Fin del logo -->
             <ul class="menu">
-                <li><a href="/index.html" class="menu_color">Inicio</a></li>
-                <li><a href="/html/crypto__final.html" class="menu_color">Criptomonedas</a></li>
-                <li><a href="/html/nft__final.html" class="menu_color">NFT</a></li>
-                <li><a href="/html/contacto__final.html" class="menu_color">¡Contacto!</a></li>
-                <li><a href="/html/portafolio__final.html" class="menu_color">Tú portafolio</a></li>
+                <li><a href="../index.html" class="menu_color">Inicio</a></li>
+                <li><a href="../html/crypto__final.html" class="menu_color">Criptomonedas</a></li>
+                <li><a href="../html/nft__final.html" class="menu_color">NFT</a></li>
+                <li><a href="../html/contacto__final.html" class="menu_color">¡Contacto!</a></li>
+                <li><a href="../html/portafolio__final.html" class="menu_color">Tú portafolio</a></li>
             </ul>
         </div>
         <p class="text-center text-body-secondary">Made with ❤ in Argentina</p>
@@ -73,23 +73,23 @@
     <footer class="py-3 my-4" id="footer__final">
         <ul class="nav justify-content-center border-bottom pb-md-1 mb-md-4">
             <li class="nav-item">
-                <a href="/index.html" class="nav-link px-2 text-body-secondary">
+                <a href="../index.html" class="nav-link px-2 text-body-secondary">
                     <button type="button" class="btn btn-outline-primary">Ir al inicio</button>
                 </a></li>
             <li class="nav-item">
-                <a href="/html/contacto__final.html" class="nav-link px-2">
+                <a href="../html/contacto__final.html" class="nav-link px-2 text-body-secondary">
                     <button type="button" class="btn btn-outline-primary">Contacto</button>
                 </a></li>
             <li class="nav-item">
-                <a href="/html/portafolio__final.html" class="nav-link px-2 text-body-secondary">
+                <a href="../html/portafolio__final.html" class="nav-link px-2 text-body-secondary">
                     <button type="button" class="btn btn-outline-primary">Portafolio</button>
                 </a></li>
             <li class="nav-item">
-                <a href="/html/crypto__final.html" class="nav-link px-2 text-body-secondary">
+                <a href="../html/crypto__final.html" class="nav-link px-2 text-body-secondary">
                     <button type="button" class="btn btn-outline-primary">Criptomonedas</button>
                 </a></li>
             <li class="nav-item">
-                <a href="/html/nft__final.html" class="nav-link px-2 text-body-secondary">
+                <a href="../html/nft__final.html" class="nav-link px-2 text-body-secondary">
                     <button type="button" class="btn btn-outline-primary">NFT</button>
                 </a></li>
         </ul>
