--- a/index.html
+++ b/index.html
@@ -128,8 +128,6 @@
                             </p>
                             <p class="text-bg-success">Las plataformas de trading y compra/venta de criptomonedas han crecido de manera impresionante, facilitando el acceso y la gestión de criptomonedas para usuarios de todo el mundo. A medida que la demanda continúa creciendo, estas plataformas desempeñarán un papel clave en el ecosistema de las criptomonedas, permitiendo a los usuarios participar en este emocionante mercado.
                             </p>
-                            <!-- Widget de BINANCE para mostrar distintas crypto-->
-                            <script src="https://public.bnbstatic.com/unpkg/growth-widget/cryptoCurrencyWidget@0.0.9.min.js" ></script><div class="binance-widget-marquee" data-cmc-ids="1,1027,52,1839,3408,5426,74,3890,5805,7083" data-theme="light" data-transparent="false" data-locale="en">
                             </div>
                     </article></section>
     </div>
@@ -162,19 +160,19 @@
     <footer class="py-3 my-4" id="footer__final">
         <ul class="nav justify-content-center border-bottom pb-md-1 mb-md-4">
             <li class="nav-item">
-                <a href="/html/contacto__final.html" class="nav-link px-2">
+                <a href="./html/contacto__final.html" class="nav-link px-2">
                     <button type="button" class="btn btn-outline-primary">Contacto</button>
                 </a></li>
             <li class="nav-item">
-                <a href="/html/portafolio__final.html" class="nav-link px-2 text-body-secondary">
+                <a href="./html/portafolio__final.html" class="nav-link px-2 text-body-secondary">
                     <button type="button" class="btn btn-outline-primary">Portafolio</button>
                 </a></li>
             <li class="nav-item">
-                <a href="/html/crypto__final.html" class="nav-link px-2 text-body-secondary">
+                <a href="./html/crypto__final.html" class="nav-link px-2 text-body-secondary">
                     <button type="button" class="btn btn-outline-primary">Criptomonedas</button>
                 </a></li>
             <li class="nav-item">
-                <a href="/html/nft__final.html" class="nav-link px-2 text-body-secondary">
+                <a href="./html/nft__final.html" class="nav-link px-2 text-body-secondary">
                     <button type="button" class="btn btn-outline-primary">NFT</button>
                 </a></li>
         </ul>
