cambio de index

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Preentrega Proyecto final 3</title>
+	<title>Inicio</title>
     <meta name="description" content="Bienvenidos a Finargy. Tu página favorita sobre finanzas del país...">
     <meta name="keywords" content="finanzas, Argentina, economía">
     <meta name="author" content="Schenvz, ARbiop">
@@ -87,7 +87,7 @@
                                 <p>En resumen, USDT ha ganado popularidad como una forma confiable de mantener valor en el mundo de las criptomonedas.
                                 </p>
                                 <!-- Widget para mostrar el precio de USDT -->
-                                <script type="text/javascript" src="https://files.coinmarketcap.com/static/widget/currency.js"></script><div class="coinmarketcap-currency-widget" data-currencyid="825" data-base="ARS" data-secondary="USD" data-ticker="true" data-rank="true" data-marketcap="true" data-volume="true" data-statsticker="true" data-stats="ARS"></div>
+                                <script type="text/javascript" src="https://files.coinmarketcap.com/static/widget/currency.js"></script><div class="coinmarketcap-currency-widget text-center" data-currencyid="825" data-base="ARS" data-secondary="USD" data-ticker="true" data-rank="true" data-marketcap="true" data-volume="true" data-statsticker="true" data-stats="ARS"></div>
                         </article></section>
         <!--Segundo artículo-->
         <div class="col-sm">    
