--- a/html/contacto__final.html
+++ b/html/contacto__final.html
@@ -1,135 +1,264 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>¡Contactanos!</title>
-    <meta name="description" content="Bienvenidos a Finargy. Tu página favorita sobre finanzas del país...">
-    <meta name="keywords" content="finanzas, Argentina, economía, contacto">
-    <meta name="author" content="Schenvz, ARbiop">
-    <meta name="robots" content="index, follow">
-    <meta name="geo.region" content="AR">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-	<link rel="stylesheet" href="../css/estilos.css">
-    <link rel="icon" href="../img/btc3.ico">
-</head>
-<body>
-<!-- Inicio del encabezado -->
-<header class="container-fluid">
-    <a href="../index.html" class="logo sticky-top" id="#" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000"><h1 class="d-inline p-2 bg-dark text-white">Finanzas2GO</h1></a>
-    <div class="container d-flex align-items-center justify-content-end">
-        <button class="btn bg-white text-black btn-outline-ligth btn-l btn-lg hamburger_menu" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
-        Menú <i class="fa-solid fa-bars fa-lg"></i>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>¡Contactanos!</title>
+    <meta
+      name="description"
+      content="Bienvenidos a Finargy. Tu página favorita sobre finanzas del país..."
+    />
+    <meta name="keywords" content="finanzas, Argentina, economía, contacto" />
+    <meta name="author" content="Schenvz, ARbiop" />
+    <meta name="robots" content="index, follow" />
+    <meta name="geo.region" content="AR" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="../css/estilos.css" />
+    <link rel="icon" href="../img/btc3.ico" />
+  </head>
+  <body>
+    <!-- Inicio del encabezado -->
+    <header class="container-fluid">
+      <a
+        href="../index.html"
+        class="logo sticky-top"
+        id="#"
+        data-aos="fade-down"
+        data-aos-easing="linear"
+        data-aos-duration="1000"
+        ><h1 class="d-inline p-2 bg-dark text-white">Finanzas2GO</h1></a
+      >
+      <div class="container d-flex align-items-center justify-content-end">
+        <button
+          class="btn bg-white text-black btn-outline-ligth btn-l btn-lg hamburger_menu"
+          data-aos="fade-down"
+          data-aos-easing="linear"
+          data-aos-duration="1000"
+          type="button"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasWithBothOptions"
+          aria-controls="offcanvasWithBothOptions"
+        >
+          Menú <i class="fa-solid fa-bars fa-lg"></i>
         </button>
-    </div>
-</header>
-<!-- Offcavas inicio -->
-<div class="container-fluid d-flex flex-row-reverse">
-    <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
-        aria-labelledby="offcanvasWithBothOptionsLabel">
+      </div>
+    </header>
+    <!-- Offcavas inicio -->
+    <div class="container-fluid d-flex flex-row-reverse">
+      <div
+        class="offcanvas offcanvas-end"
+        data-bs-scroll="true"
+        tabindex="-1"
+        id="offcanvasWithBothOptions"
+        aria-labelledby="offcanvasWithBothOptionsLabel"
+      >
         <div class="offcanvas-header justify-content-end">
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="offcanvas"
+            aria-label="Close"
+          ></button>
         </div>
         <div class="offcanvas-body">
-            <!-- Logo -->
-            <img class="rounded-circle" src="../img/btc3.ico"  id="logo" alt="logo_sitio" width="125" height="125">
-            <!-- Fin del logo -->
-            <ul class="menu">
-                <li><a href="../index.html" class="menu_color">Inicio</a></li>
-                <li><a href="../html/crypto__final.html" class="menu_color">Criptomonedas</a></li>
-                <li><a href="../html/nft__final.html" class="menu_color">NFT</a></li>
-                <li><a href="../html/contacto__final.html" class="menu_color">¡Contacto!</a></li>
-                <li><a href="../html/portafolio__final.html" class="menu_color">Tú portafolio</a></li>
-            </ul>
+          <!-- Logo -->
+          <img
+            class="rounded-circle"
+            src="../img/btc3.ico"
+            id="logo"
+            alt="logo_sitio"
+            width="125"
+            height="125"
+          />
+          <!-- Fin del logo -->
+          <ul class="menu">
+            <li><a href="../index.html" class="menu_color">Inicio</a></li>
+            <li>
+              <a href="../html/crypto__final.html" class="menu_color"
+                >Criptomonedas</a
+              >
+            </li>
+            <li>
+              <a href="../html/nft__final.html" class="menu_color">NFT</a>
+            </li>
+            <li>
+              <a href="../html/contacto__final.html" class="menu_color"
+                >¡Contacto!</a
+              >
+            </li>
+            <li>
+              <a href="../html/portafolio__final.html" class="menu_color"
+                >Tú portafolio</a
+              >
+            </li>
+          </ul>
         </div>
         <p class="text-center text-body-secondary">Made with ❤ in Argentina</p>
+      </div>
     </div>
-</div>
-<!-- Offcavas fin -->
-<!-- Fin del encabezado -->
+    <!-- Offcavas fin -->
+    <!-- Fin del encabezado -->
     <div class="container p-3 my-3 bg-transparent">
-        <h1 class="text-white text-center" data-aos="zoom-in-left">¿Buscás contactarnos o trabajar con nosotros...?</h1>
-            <p class="text-success text-center" data-aos="zoom-in-right">¡Estás en el lugar correcto!</p>
+      <h1 class="text-white text-center" data-aos="zoom-in-left">
+        ¿Buscás contactarnos o trabajar con nosotros...?
+      </h1>
+      <p class="text-success text-center" data-aos="zoom-in-right">
+        ¡Estás en el lugar correcto!
+      </p>
     </div>
-<!-- Inicio form contact-->
-<div>
-    <form class="container p-3 my-3 bg-secondary bg-gradient text-white">
+    <!-- Inicio form contact-->
+    <div>
+      <form class="container p-3 my-3 bg-secondary bg-gradient text-white">
         <div class="form-row">
-                <div class="form-group col-md-6">
-                    <label for="inputEmail4">Dirección de correo electrónico</label>
-                    <input type="email" class="form-control" id="inputEmail" placeholder="Mail">
-                </div>
-                <div class="form-group col-md-6">
-                    <label for="inputCountry4">¿País de residencia?</label>
-                    <input type="text" class="form-control" id="inputCountry" placeholder="De dónde sos...">
-                </div>
-                <div class="form-group col-md-6">
-                    <label for="inputCountry4">¿De qué ciudad sos?</label>
-                    <input type="text" class="form-control" id="inputCity" placeholder="CABA, Zona norte, Zona sur...">
-                </div>
+          <div class="form-group col-md-6">
+            <label for="inputEmail4">Dirección de correo electrónico</label>
+            <input
+              type="email"
+              class="form-control"
+              id="inputEmail"
+              placeholder="Mail"
+            />
+          </div>
+          <div class="form-group col-md-6">
+            <label for="inputCountry4">¿País de residencia?</label>
+            <input
+              type="text"
+              class="form-control"
+              id="inputCountry"
+              placeholder="De dónde sos..."
+            />
+          </div>
+          <div class="form-group col-md-6">
+            <label for="inputCountry4">¿De qué ciudad sos?</label>
+            <input
+              type="text"
+              class="form-control"
+              id="inputCity"
+              placeholder="CABA, Zona norte, Zona sur..."
+            />
+          </div>
         </div>
-                <div class="form-group col-md-4">
-                    <label for="inputProg">¿Sabes programar?</label>
-                    <select id="inputProg" class="form-control">
-                        <option selected>Selecciona...</option>
-                        <option>Sí</option>
-                        <option>Sí</option>
-                        </select>
-                </div>
+        <div class="form-group col-md-4">
+          <label for="inputProg">¿Sabes programar?</label>
+          <select id="inputProg" class="form-control">
+            <option selected>Selecciona...</option>
+            <option>Sí</option>
+            <option>Sí</option>
+          </select>
+        </div>
         <div class="form-group">
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="gridCheck">
-                <label class="form-check-label" for="gridCheck">CHEQUEAME</label>
-            </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="gridCheck" />
+            <label class="form-check-label" for="gridCheck">CHEQUEAME</label>
+          </div>
         </div>
-                <button type="submit" class="btn btn-primary">Ingresar</button>
-</form>
-</div>
-<!-- Fin form -->
-<!-- Inicio footer -->
-<div class="container">
-    <footer class="py-3 my-4" id="footer__final">
+        <button type="submit" class="btn btn-primary">Ingresar</button>
+      </form>
+    </div>
+    <!-- Fin form -->
+    <!-- Inicio footer -->
+    <div class="container">
+      <footer class="py-3 my-4" id="footer__final">
         <ul class="nav justify-content-center border-bottom pb-md-1 mb-md-4">
-            <li class="nav-item">
-                <a href="../index.html" class="nav-link px-2 text-body-secondary">
-                    <button type="button" class="btn btn-outline-primary">Ir al inicio</button>
-                </a></li>
-            <li class="nav-item">
-                <a href="../html/contacto__final.html" class="nav-link px-2 text-body-secondary">
-                    <button type="button" class="btn btn-outline-primary">Contacto</button>
-                </a></li>
-            <li class="nav-item">
-                <a href="../html/portafolio__final.html" class="nav-link px-2 text-body-secondary">
-                    <button type="button" class="btn btn-outline-primary">Portafolio</button>
-                </a></li>
-            <li class="nav-item">
-                <a href="../html/crypto__final.html" class="nav-link px-2 text-body-secondary">
-                    <button type="button" class="btn btn-outline-primary">Criptomonedas</button>
-                </a></li>
-            <li class="nav-item">
-                <a href="../html/nft__final.html" class="nav-link px-2 text-body-secondary">
-                    <button type="button" class="btn btn-outline-primary">NFT</button>
-                </a></li>
+          <li class="nav-item">
+            <a href="../index.html" class="nav-link px-2 text-body-secondary">
+              <button type="button" class="btn btn-outline-primary">
+                Ir al inicio
+              </button>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a
+              href="../html/contacto__final.html"
+              class="nav-link px-2 text-body-secondary"
+            >
+              <button type="button" class="btn btn-outline-primary">
+                Contacto
+              </button>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a
+              href="../html/portafolio__final.html"
+              class="nav-link px-2 text-body-secondary"
+            >
+              <button type="button" class="btn btn-outline-primary">
+                Portafolio
+              </button>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a
+              href="../html/crypto__final.html"
+              class="nav-link px-2 text-body-secondary"
+            >
+              <button type="button" class="btn btn-outline-primary">
+                Criptomonedas
+              </button>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a
+              href="../html/nft__final.html"
+              class="nav-link px-2 text-body-secondary"
+            >
+              <button type="button" class="btn btn-outline-primary">NFT</button>
+            </a>
+          </li>
         </ul>
-        <p class="text-center text-body-secondary"> Finargy.com</p>
-        <p class="text-center text-body-secondary text-black-50"> 2023</p>
-    </footer>
-</div>
+        <p class="text-center text-body-secondary">Finargy.com</p>
+        <p class="text-center text-body-secondary text-black-50">2023</p>
+      </footer>
+    </div>
 
-<script src="https://kit.fontawesome.com/kitcode.js" crossorigin="anonymous"> </script>
+    <script
+      src="https://kit.fontawesome.com/kitcode.js"
+      crossorigin="anonymous"
+    ></script>
 
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-<script> AOS.init();</script>
+    <script>
+      AOS.init();
+    </script>
 
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
 
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
