--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <meta name="author" content="Schenvz, ARbiop" />
     <meta name="robots" content="index, follow" />
     <meta name="geo.region" content="AR" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./css/estilos.css" />
     <link rel="icon" href="./img/btc3.ico" />
   </head>
