--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         data-aos="fade-down"
         data-aos-easing="linear"
         data-aos-duration="1000"
-        ><h1 class="d-inline p-2 bg-dark text-white">Finanzas2GO</h1></a
+        ><h1 class="d-inline p-2 bg-warning text-white">Finanzas2GO</h1></a
       >
       <div class="container d-flex align-items-center justify-content-end">
         <button
@@ -167,11 +167,11 @@
           </div>
           <div class="container-xl">
             <!-- Título del primer artículo -->
-            <h2>
-              El precio de USDT supera en volumen de transacciones al BitCoin y
-              este mismo es destronado como el "Rey" de las divisas virtuales
-            </h2>
             <article class="bg-light">
+              <h2>
+                El precio de USDT supera en volumen de transacciones al BitCoin y
+                este mismo es destronado como el "Rey" de las divisas virtuales
+              </h2>
               <p>
                 El volumen de operaciones de Tether ha experimentado un
                 crecimiento significativo en los últimos años. Una de las
