--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
                     Bitcoin: Sus inicios, el auge en 2021 y el precio actual
                   </h3>
                   <article class="bg-light">
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/52NGJPcLUzQq5w7uv4e5gf?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                     <p class="text-bg-dark">
                       Bitcoin, la primera criptomoneda descentralizada, ha
                       tenido un recorrido apasionante desde su creación en 2009
