--- a/index.html
+++ b/index.html
@@ -167,10 +167,12 @@
           </div>
           <div class="container-xl">
             <!-- Título del primer artículo -->
+
             <article class="bg-light">
               <h2>
-                El precio de USDT supera en volumen de transacciones al BitCoin y
-                este mismo es destronado como el "Rey" de las divisas virtuales
+                El precio de USDT supera en volumen de transacciones al BitCoin
+                y este mismo es destronado como el "Rey" de las divisas
+                virtuales
               </h2>
               <p>
                 El volumen de operaciones de Tether ha experimentado un
@@ -245,11 +247,20 @@
                 ></div>
                 <div class="container-xl">
                   <!-- Título del Segundo artículo -->
-                  <h3>
-                    Bitcoin: Sus inicios, el auge en 2021 y el precio actual
-                  </h3>
                   <article class="bg-light">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/52NGJPcLUzQq5w7uv4e5gf?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <h3>
+                      Bitcoin: Sus inicios, el auge en 2021 y el precio actual
+                    </h3>
+                    <iframe
+                      style="border-radius: 12px"
+                      src="https://open.spotify.com/embed/track/52NGJPcLUzQq5w7uv4e5gf?utm_source=generator"
+                      width="100%"
+                      height="152"
+                      frameborder="0"
+                      allowfullscreen=""
+                      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                      loading="lazy"
+                    ></iframe>
                     <p class="text-bg-dark">
                       Bitcoin, la primera criptomoneda descentralizada, ha
                       tenido un recorrido apasionante desde su creación en 2009
